# tooliscode

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
examples/: responses.py
scripts/: function_call.py
src/tooliscode/: __init__.py  functions.py  guest.py  guest_helpers.py  host.py  runtime.py  wasi_server.py  wasi_service.py
src/tooliscode/examples/: tool_is_code_client.py  validate_host.py  wasi_client.py
src/tooliscode/validations/: validate_host.py  validate_tool_is_code.py
tests/: conftest.py  test_functions.py  test_runtime.py  test_version.py
