[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tooliscode"
version = "0.1.0"
description = "Starter Python package for the tooliscode project."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Prashanth Radhakrishnan" }
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["openai", "wasmtime"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://example.com/tooliscode"
Source = "https://example.com/tooliscode/source"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
dev-dependencies = [
  "pytest>=8.0",
  "ruff>=0.5.0",
]
